manifests/infrastructure/gitops/harbor/containerd-config.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: containerd-config-updater
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: containerd-config-updater
  template:
    metadata:
      labels:
        name: containerd-config-updater
    spec:
      hostNetwork: true
      hostPID: true
      containers:
      - name: pause
        image: gcr.io/google_containers/pause:3.2
      volumes:
      - name: host-etc
        hostPath:
          path: /etc
      tolerations:
      - operator: Exists
