manifests/infrastructure/gitops/harbor/harbor-ingress-tls-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - harbor.local
      secretName: harbor-internal-tls
